--- a/documents/templates/documents/base.html
+++ b/documents/templates/documents/base.html
@@ -313,6 +313,7 @@
                 {% if user.is_authenticated %}
                     <a href="{% url 'dashboard' %}">Dashboard</a>
                     <a href="{% url 'document_list' %}">Documents</a>
+                    <a href="{% url 'chatbot' %}"><i class="fas fa-robot"></i> AI Assistant</a>
                     <a href="{% url 'favorites_list' %}">Favorites</a>
                     <a href="{% url 'notifications_list' %}">Notifications</a>
                     
